syntax = "proto3";

package hello_service;

option go_package = "stub/pb";

message HelloRequest{
   string name = 1;
}

message HelloResponse{
   string message = 1;
}

service Greeter{
   rpc SayHello(HelloRequest) returns(HelloResponse) {}
}

/* Added directly by the Team Lead


